# Project-C-Playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cicd.yaml
core/: main.c
libs/example1/: CMakeLists.txt  example1.h
libs/example1/source/: example1.c
scripts/cmake/: CompilerInfo.cmake  CompilerWarnings.cmake  Sanitizers.cmake
tests/google-test/: CMakeLists.txt
tests/google-test/google-tests-lib/: CMakeLists.txt  README.md  appveyor.yml
tests/google-test/google-tests-lib/.github/ISSUE_TEMPLATE/: 90-question.md
tests/google-test/google-tests-lib/ci/: linux-presubmit.sh  macos-presubmit.sh
tests/google-test/google-tests-lib/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  primer.md
tests/google-test/google-tests-lib/docs/_data/: navigation.yml
tests/google-test/google-tests-lib/docs/_layouts/: default.html
tests/google-test/google-tests-lib/googlemock/: CMakeLists.txt
tests/google-test/google-tests-lib/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
tests/google-test/google-tests-lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
tests/google-test/google-tests-lib/googlemock/src/: gmock-spec-builders.cc  gmock_main.cc
tests/google-test/google-tests-lib/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test.py
tests/google-test/google-tests-lib/googletest/: CMakeLists.txt  README.md
tests/google-test/google-tests-lib/googletest/cmake/: internal_utils.cmake
tests/google-test/google-tests-lib/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest.h  gtest_pred_impl.h
tests/google-test/google-tests-lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-type-util.h
tests/google-test/google-tests-lib/googletest/samples/: prime_tables.h  sample2.h  sample3-inl.h  sample4.h
tests/google-test/google-tests-lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
tests/google-test/google-tests-lib/googletest/test/: googletest-param-test-test.cc  googletest-param-test-test.h  googletest-printers-test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest_unittest.cc  production.h
tests/google-test/libs/example1/: example1.cpp
