cmake_minimum_required(VERSION 3.13)
set(CMAKE_VERBOSE_MAKEFILE ON)

########################################################################################################################
# Project settings
########################################################################################################################
project(playground C CXX)
########################################################################################################################

########################################################################################################################
# Compiler
########################################################################################################################
# Compiler warnings - Link this 'library' to use the warnings specified in CompilerWarnings.cmake
add_library(project_warnings INTERFACE)
include(scripts/cmake/CompilerWarnings.cmake)
set_project_warnings(project_warnings)
include(scripts/cmake/CompilerInfo.cmake)
########################################################################################################################

########################################################################################################################
# Libraries
########################################################################################################################
add_subdirectory(libs)
########################################################################################################################

########################################################################################################################
# Unit Tests
########################################################################################################################
add_subdirectory(tests)
########################################################################################################################

########################################################################################################################
# Create EXE
########################################################################################################################
add_executable(${PROJECT_NAME} core/main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE project_warnings example1)
########################################################################################################################