set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 3.13)
########################################################################################################################
# Project settings
########################################################################################################################
project(playground C CXX)
add_library(project_options INTERFACE)

########################################################################################################################

########################################################################################################################
# Compiler
########################################################################################################################
# Compiler warnings - Link this 'library' to use the warnings specified in CompilerWarnings.cmake
include(scripts/cmake/CompilerWarnings.cmake)
include(scripts/cmake/CompilerInfo.cmake)
add_library(project_warnings INTERFACE)
set_project_warnings(project_warnings)
target_compile_features(project_options INTERFACE c_std_99)
########################################################################################################################

########################################################################################################################
# Libraries
########################################################################################################################
add_subdirectory(libs)
########################################################################################################################

########################################################################################################################
# Unit Tests
########################################################################################################################
add_subdirectory(tests)
########################################################################################################################

########################################################################################################################
# Sanitizers
########################################################################################################################
include(scripts/cmake/Sanitizers.cmake)
enable_sanitizers(project_options)
########################################################################################################################

########################################################################################################################
# Create EXE
########################################################################################################################
add_executable(${PROJECT_NAME} core/main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE project_options project_warnings example1)
########################################################################################################################